--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-CloudKilat Documentation
+Dokumentasi CloudKilat
 
-Markdown source of the CloudKilat documentation online at http://www.cloudkilat.com/
-For corrections or suggestions please send a pull request.
+Sumber dokumentasi online CloudKilat di http://www.cloudkilat.com/
+Untuk memberikan saran atau koreksi silahkan kirimkan permintaan pull request.
+
